@@ -928,9 +928,10 @@ class Fsck(object):
         if not isinstance(plain_backend, LocalBackend):
             return
 
-        log.info('Checking for temporary objects (backend)...')
+        log.info('Checking for temporary objects and empty directories (backend)...')
 
-        for (path, dirnames, filenames) in os.walk(plain_backend.prefix, topdown=True):
+        empty_dirs = 0
+        for (path, dirnames, filenames) in os.walk(plain_backend.prefix, topdown=False):
             for name in filenames:
                 if not re.search(r'^[^#]+#[0-9]+--?[0-9]+\.tmp$', name):
                     continue
@@ -938,6 +939,15 @@ class Fsck(object):
                 self.found_errors = True
                 self.log_error("removing temporary file %s", name)
                 os.unlink(os.path.join(path, name))
+                
+            if path != plain_backend.prefix:
+                try:
+                    os.rmdir(path)
+                    empty_dirs += 1
+                except OSError:
+                    pass
+                    
+        log.info('Removed %d empty directories', empty_dirs)
 
     def check_objects_id(self):
         """Check objects.id"""
